# api/swagger.yaml
@@ -100,6 +100,10 @@ tags:
 tags: 
   name: Inscripciones
   description: Manejo Inscripciones API
+tags: 
+  name: Usuarios
+  description: Manejo usuarios de la API
+
 
 #paths
 paths:
@@ -655,6 +659,50 @@ paths:
           required: true
           schema:
             type: integer    
+      responses:
+        '200':
+          description: Solicitud exitosa
+        '400':
+          description: Error en la solicitud
+          
+  #Usuario
+  /login/crear:
+    post:
+      tags: [Usuarios]
+      summary: Agrega un usuario.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                mail:
+                  type: string
+                pass:
+                  type: string      
+                id_alumno:   
+                  type: integer
+      responses:
+        '200':
+          description: Solicitud exitosa
+        '400':
+          description: Error en la solicitud
+  /login:
+    post:
+      tags: [Usuarios]
+      summary: busca un usuario.
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                mail:
+                  type: string
+                pass:
+                  type: string      
       responses:
         '200':
           description: Solicitud exitosa
